--- a/WindowsFormsApp1/WindowsFormsApp1/Form2.resx
+++ b/WindowsFormsApp1/WindowsFormsApp1/Form2.resx
@@ -138,4 +138,10 @@
   <metadata name="ownersTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>1274, 35</value>
   </metadata>
+  <metadata name="freqantinfBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 72</value>
+  </metadata>
+  <metadata name="freq_ant_infTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>188, 72</value>
+  </metadata>
 </root>
